# vector-based-label-propagation

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: datasets.yaml  default.yaml
configs/experiments/: amazon_table2.yaml  taobao_table4.yaml  yelp_table3.yaml
notebooks/: 01_quickstart_vlp.ipynb  02_benchmarks.ipynb  Full_exp_for_VLP_paper.ipynb
scripts/: benchmark.py  download_data.py  make_plots.py  make_tables.py  run_baselines.py  run_vlp.py
src/vlp/: algo.py  core.py
src/vlp/baselines/: pyg_lp.py  sklearn_lp.py  sknetwork_lp.py
src/vlp/eval/: metrics.py  runner.py  tables.py
src/vlp/utils/: device.py  logging.py  memory.py  seed.py  timer.py
tests/: test_cli.py  test_equivalence_small.py  test_memory_guard.py  test_stochasticity.py
